# commandline-rust

03-catr/src/: lib.rs
03-catr/tests/expected/: extra-lines.txt.b.n.out  extra-lines.txt.b.out
04-headr/: Cargo.toml
04-headr/tests/: cli.rs
05-wcr/src/: lib.rs
06-uniqr/tests/: cli.rs
07-findr/tests/expected/: path1_maxdepth1.txt  path_a_maxdepth1.txt  path_a_maxdepth2_mindepth1.txt
08-cutr/src/: lib.rs
08-cutr/tests/: cli.rs
09-grepr/: Cargo.toml
09-grepr/src/: lib.rs
10-commr/: Cargo.toml
10-commr/src/: lib.rs  main.rs
11-tailr/: Cargo.toml
11-tailr/src/: lib.rs
11-tailr/tests/: cli.rs
12-fortuner/: Cargo.toml
12-fortuner/src/: lib.rs
12-fortuner/tests/: cli.rs
13-calr/: Cargo.toml
13-calr/src/: lib.rs
13-calr/tests/: cli.rs
3-catr/src/: lib.rs
3-catr/tests/: cli.rs
3-catr/tests/expected/: extra-lines.txt.b.s.out  extra-lines.txt.n.out  extra-lines.txt.s.out
3-catr/tests/inputs/: extra-lines.txt
4-header/src/: lib.rs
5-wcr/: Cargo.toml
6-uniqr/: Cargo.toml
6-uniqr/src/: lib.rs
7-findr/src/: lib.rs
7-findr/tests/: cli.rs
8-cutr/: Cargo.toml
8-cutr/src/: lib.rs  main.rs
8-cutr/tests/: cli.rs
