[package]
name = "tailr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
num = "0.4.1"
once_cell = "1.18.0"
regex = "1.10.2"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
rand = "0.8.5"
